[package]
name = "alice-space"
version = "0.5.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
description = "ALICE-Space — Deep-space communication, autonomous trajectory control, GNSS foundation (WGS-84 geodetic, TLE parser, DOP)"
license = "AGPL-3.0-only"
repository = "https://github.com/ext-sakamoro/ALICE-Space"
keywords = ["space", "orbit", "gnss", "geodetic", "tle"]

[dependencies]

[dev-dependencies]
proptest = "1.4"

[lib]
name = "alice_space"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []
ffi = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
